Fix checkbox for overflow

--- a/src/components/Option/option.css
+++ b/src/components/Option/option.css
@@ -51,19 +51,12 @@
     visibility: hidden;
   }
 
-  .checkmark + .answer::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0.5rem;
+  .checkbox {
     width: 1.5rem;
     height: 1.5rem;
+    margin-top: 0.2rem;
     border: 2px solid var(--white);
     border-radius: 4px;
-  }
-
-  .checkmark + .answer:has(.answer-text)::before {
-    top: 0;
   }
 
   input[type="radio"]:checked + .radio {
@@ -86,10 +79,7 @@
     max-height: 6rem;
     overflow-y: auto;
     padding: 0 16px;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
+    scrollbar-width: none;
   }
 
   .code-preview {
